Don't scroll to the selected element if the reflow was interrupted, we'll do it later. b=512410 r=bzbarsky