layout/forms/nsListControlFrame.h
@@ -438,6 +438,12 @@ protected:
   // pass.  This only happens for auto heights.
   PRPackedBool mMightNeedSecondPass:1;
 
+  /**
+   * Set to aPresContext->HasPendingInterrupt() at the start of Reflow.
+   * Set to PR_FALSE at the end of DidReflow.
+   */
+  PRPackedBool mHasPendingInterruptAtStartOfReflow:1;
+
   // The last computed height we reflowed at if we're a combobox dropdown.
   // XXXbz should we be using a subclass here?  Or just not worry
   // about the extra member on listboxes?
